--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<h1>Joshua</h1>
+<!DOCTYPE html>
+<Html>
+    <Head>
+        <title>Todo List Application</title>
+    </Head>
+    <body>
+     July 18 Do laundry 
+     July 18 Walk the dog
+     july 18 Cut the grass 
+     July 18 Clean my room
+     July 18  Do dishes
+        <!--hello this is a great day-->
+    </body>
+</Html>
