--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <Html>
     <Head>
         <title>Todo List Application</title>
+        <link href=index.css" type="text/css" rel="stylesheet">
     </Head>
     <body>
         <h1> Todo list Application</h1>
