--- a/index.html
+++ b/index.html
@@ -2,30 +2,35 @@
 <Html>
     <Head>
         <title>Todo List Application</title>
-        <link href=index.css" type="text/css" rel="stylesheet">
+        <link href="index.css" type="text/css" rel="stylesheet">
     </Head>
     <body>
         <h1> Todo list Application</h1>
         <ul>
             <li>
                 <input type="checkbox">
-               <a href="Show.html"> Do laundry </a> 
+               <a href="Show.html">
+                <span class="todo"> Do laundry </span> </a> 
              </li>
             <li>
                 <input type="checkbox">
-                <a href="Show.html"> Take out the trash </a>
+                <a href="Show.html">
+                <span class="todo"> Take out the trash </span> </a>
             </li>
             <li>
                 <input type="checkbox">
-               <a href="Show.html"> Cut the grass</a> 
+               <a href="Show.html"></a>
+               <span class="todo"> Cut the grass </span> 
             </li> 
             <li>
                 <input type="checkbox">
-               <a href="Show.html"> Clean my room</a>
+               <a href="Show.html">
+                <span class="todo"> clean my room </span> </a>
             </li>
             <li>
                 <input type="checkbox">
-                <a href="Show.html"> Do dishes</a>
+                <a href="Show.html">
+                <span class="todo"> Do dishes</span> </a>
             </li>
             <a href= "    "></a>
             
