--- a/show.html
+++ b/show.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
-    <Head>
+    <head>
        <title> Detail for task</title> 
-    </Head>
+       <link href="show.css" type="text/css" rel="stylesheet">
+    </head>
     <body>
         <h1> Details for task</h1>
-      <a href="index.html"> back</a>
-      <a href="*">edit</a>
-      <a href="*">delete</a>
+          <a href="index.html"> back</a>
+          <a href="*">edit</a>
+          <a href="*">delete</a>
     </body>
 </html>
